[tool.poetry]
name = "parametrized-harness"
version = "0.1.0"
description = ""
authors = ["Benedikt Bartscher <bb@senbax.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.4.7"
pytest = "^8.1.1"
selenium = "^4.19.0"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
exclude = ["**/.venv", "**/.web", ".gitlab-ci-local", ".mypy_cache", ".pyright_cache", ".pytest_cache", ".venv", ".web", "alembic"]
reportIgnoreCommentWithoutRule = true
typeCheckingMode = "basic"
reportAny = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
